--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">BookCenter</a>
+          <a class="navbar-brand" href="/">CarCenter</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/book/">Book</a>
+                <a class="nav-link" href="/book/">Car</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/user/">User</a>
